--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.3.1",
     "next": "14.1.0",
     "next-intl": "^3.11.3",
@@ -39,6 +40,7 @@
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
